Fix cta video height on mobile

--- a/wp-content/themes/noia-theme/assets/css/editor-style.css
+++ b/wp-content/themes/noia-theme/assets/css/editor-style.css
@@ -1303,10 +1303,14 @@ hr {
   bottom: 0;
   right: 0;
   width: 100%;
-  height: 75vh;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+}
+@media (min-width: 50em) {
+  .cta--video {
+    height: 75vh;
+  }
 }
 .cta--video video {
   min-width: 100%;
