--- a/wp-content/themes/noia-theme/assets/css/styles.css
+++ b/wp-content/themes/noia-theme/assets/css/styles.css
@@ -1681,10 +1681,14 @@ html.with-featherlight {
   bottom: 0;
   right: 0;
   width: 100%;
-  height: 75vh;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+}
+@media (min-width: 50em) {
+  .cta--video {
+    height: 75vh;
+  }
 }
 .cta--video video {
   min-width: 100%;
