--- a/wp-content/themes/noia-theme/src/styles/components/_cta.scss
+++ b/wp-content/themes/noia-theme/src/styles/components/_cta.scss
@@ -21,10 +21,12 @@
 		bottom: 0;
 		right: 0;
 		width: 100%;
-		height: 75vh;
 		background-size: cover;
 		background-position: center;
 		background-attachment: fixed;
+		@include mq(medium) {
+			height: 75vh;
+		}
 		video {
 			min-width: 100%;
 			min-height: 100%;
